--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,11 +9,11 @@
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="src/inherit.js"></script>
+  <!-- include source files here... -->  
+  <script type="text/javascript" src="lib/inherit.js"></script>
   <script type="text/javascript" src="src/property.js"></script>
 
-  <!-- include source files here... -->
+  <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecPropertyLibraryEntry.js"></script>
   <script type="text/javascript" src="spec/SpecPropertyLibraryCategory.js"></script>
   <script type="text/javascript" src="spec/SpecPropertyLibrary.js"></script>
